[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Quadro.jpeg" type="Texture" id=1]
[ext_resource path="res://puzzle_luiza.gd" type="Script" id=2]
[ext_resource path="res://Themes/default_theme.tres" type="Theme" id=3]

[node name="puzzle_luiza" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="puzzle" type="NinePatchRect" parent="."]
visible = false
margin_left = 66.0
margin_top = 19.0
margin_right = 559.0
margin_bottom = 292.0
theme = ExtResource( 3 )
texture = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="puzzle"]
margin_left = 174.0
margin_top = 300.0
margin_right = 296.0
margin_bottom = 324.0

[node name="certo" type="Label" parent="puzzle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.5
margin_top = -106.5
margin_right = 45.5
margin_bottom = -92.5
text = "Certo!!!"

[node name="errado" type="Label" parent="puzzle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.5
margin_top = -106.5
margin_right = 45.5
margin_bottom = -92.5
text = "Errado!!!"
align = 1

[node name="Label" type="Label" parent="puzzle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.5
margin_top = -15.5
margin_right = 49.5
margin_bottom = 4.5
text = "bnps f qba"
autowrap = true

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5

[node name="Timer3" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
